addons/spinnaker/overlays/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-ingress
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: deck.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spin-deck
                port:
                  number: 9000
    - host: gate.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spin-gate
                port:
                  number: 8084
